name:                hakyll-blog
version:             0.1.0.0
synopsis:            dannysu.com blog
description:         Please see README.md
homepage:            http://github.com/dannysu/hakyll-blog#readme
license-file:        LICENSE
author:              Danny Su
maintainer:          contact@dannysu.com
copyright:           Copyright: (c) 2016 Danny Su
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.22

executable site
  hs-source-dirs:      src
  main-is:             site.hs
  build-depends:       base,
                       hakyll,
                       pandoc
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dannysu/hakyll-blog
