name:                hakyll-blog
version:             0.1.0.0
synopsis:            dannysu.com blog
description:         Please see README.md
homepage:            http://github.com/dannysu/hakyll-blog#readme
license-file:        LICENSE
author:              Danny Su
maintainer:          contact@dannysu.com
copyright:           2017 Danny Su
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable site
  hs-source-dirs:      src
  main-is:             site.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       pandoc
